unpackaged/main/default/objects/Resource__c/fields/Accounts_UUID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_UUID__c</fullName>
    <label>Accounts UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>