unpackaged/main/default/objects/Resource__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>