unpackaged/main/default/objects/Resource__c/fields/Book_Format__c.field-meta.xml
<CustomField>
    <fullName>Book_Format__c</fullName>
    <label>Book Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Kindle</fullName>
            </value>
            <value>
                <fullName>iBooks</fullName>
            </value>
            <value>
                <fullName>Bookshare</fullName>
            </value>
            <value>
                <fullName>Chegg Reader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>