unpackaged/main/default/objects/Resource__c/fields/Last_accessed__c.field-meta.xml
<CustomField>
    <fullName>Last_accessed__c</fullName>
    <label>Last accessed</label>
    <type>Date</type>
</CustomField>