unpackaged/main/default/objects/Resource__c/fields/Number_of_times_accessed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_times_accessed__c</fullName>
    <label>Number of times accessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>