unpackaged/main/default/objects/Resource__c/fields/OpenStax_Account__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>OpenStax Account</label>
    <referenceTo>OpenStax_Account__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>