unpackaged/main/default/objects/Resource__c/fields/OS_Accounts_ID__c.field-meta.xml
<CustomField>
    <fullName>OS_Accounts_ID__c</fullName>
    <label>OS Accounts ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>