unpackaged/main/default/objects/Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_accessed__c</columns>
    <columns>Book__c</columns>
    <columns>Number_of_times_accessed__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Accounts_UUID__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>