unpackaged/main/default/objects/Resource__c/listViews/Missing_Contact.listView-meta.xml
<ListView>
    <fullName>Missing_Contact</fullName>
    <columns>NAME</columns>
    <columns>Last_accessed__c</columns>
    <columns>Book__c</columns>
    <columns>Number_of_times_accessed__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Accounts_UUID__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
    </filters>
    <label>Missing Contact</label>
</ListView>