unpackaged/main/default/objects/Resource__c/listViews/Recent_Downloads.listView-meta.xml
<ListView>
    <fullName>Recent_Downloads</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OS_Accounts_ID__c</columns>
    <columns>Accounts_UUID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_YEAR</value>
    </filters>
    <label>Recent Download</label>
</ListView>